webpack hot reload configured

--- a/src/css/mystyle.css
+++ b/src/css/mystyle.css
@@ -1,3 +1,4 @@
-body{
-    background-image: '../../assets/BGPattern.gif'
+body {
+    background-image: '../../assets/BGPattern.gif';
+    color: 'blue';
 }
