--- a/src/css/mystyle.css
+++ b/src/css/mystyle.css
@@ -92,8 +92,9 @@ a:hover img {
 
 img {
   border: none;
-  max-width: 100%;
-  height: auto;
+  /*max-width: 100%;*/
+  /*max-height: auto;*/
+  /*height: calc(50% - 200px);*/
   display: block;
   background: #ccc;
   transition: transform .2s ease-in-out;
@@ -108,4 +109,16 @@ img {
     width: 100%;
 }
 
+.box{
+    width: 100%; /*Use this to control width of the parent container, hence the image*/
+    overflow: hidden;
+}
+
+img.clipped {
+    /*width: 100%;*/
+    height: 250px;
+    width: 120%;
+    float: left; 
+    float: right; 
+}
   
