--- a/src/css/mystyle.css
+++ b/src/css/mystyle.css
@@ -92,7 +92,7 @@ a:hover img {
 
 img {
   border: none;
-  /*max-width: 100%;*/
+  max-width: 100%;
   /*max-height: auto;*/
   /*height: calc(50% - 200px);*/
   display: block;
@@ -116,8 +116,8 @@ img {
 
 img.clipped {
     /*width: 100%;*/
-    height: 250px;
-    width: 120%;
+    /*height: 250px;*/
+    width: 100%;
     float: left; 
     float: right; 
 }
